# garmin-training-toolkit-sdk

./: .gitignore  CHANGELOG.md  README.md  SETUP.md  example_ingestion.py  garmin-api.md  garmin.py  garmin_auth.py  garmin_auth_browser.py  garmin_tokens.json  garmin_utils.py  requirements.txt
.github/workflows/: ci.yml
.opencode/skills/garmin-analysis/: SKILL.md
.opencode/skills/garmin-status/: SKILL.md
ai-infra/: architecture-plan.md  goal.md  roadmap.md
garmin-analyzer/: .gitignore  README.md  RESEARCH_TRAINING_PRINCIPLES.md  TRAINING_GUIDELINES.md  collector.py  database.py  plan_generator.py  progress.py  race_predictor.py  recovery.py  requirements.txt  sync.py
garmin-workout-uploader/: .env.example  .gitignore  README.md  garmin_auth_browser.py  garmin_workout_uploader.py  requirements.txt  workouts.json
garmin_toolkit/: DESIGN_PHILOSOPHY.md  GARMIN_API_QUIRKS.md  README.md  debug_activity.py  debug_swim.py  pyproject.toml
garmin_toolkit/src/garmin_toolkit/: __init__.py  auth.py  utils.py
garmin_toolkit/src/garmin_toolkit/extractors/: __init__.py  activities.py  biometrics.py
garmin_toolkit/src/garmin_toolkit/models/: __init__.py  activities.py  biometrics.py  telemetry.py
garmin_toolkit/src/garmin_toolkit/uploaders/: workouts.py
garmin_toolkit/src/garmin_toolkit/weather/: __init__.py  config.py  weather.db
garmin_toolkit/src/garmin_toolkit/weather/sources/: __init__.py  open_meteo.py  openweather.py
garmin_toolkit/src/garmin_toolkit/weather/storage/: __init__.py  sqlite.py
garmin_toolkit/src/garmin_training_toolkit_sdk/: __init__.py  auth.py  utils.py
garmin_toolkit/src/garmin_training_toolkit_sdk/core/: base.py  factory.py  garmin.py
garmin_toolkit/src/garmin_training_toolkit_sdk/extractors/: __init__.py  activities.py  biometrics.py
garmin_toolkit/src/garmin_training_toolkit_sdk/models/: biometrics.py  user.py  workouts.py
garmin_toolkit/src/garmin_training_toolkit_sdk/protocol/: __init__.py  activities.py  biometrics.py  telemetry.py  user.py  workouts.py
garmin_toolkit/src/garmin_training_toolkit_sdk/testing/: mock.py
garmin_toolkit/src/garmin_training_toolkit_sdk/uploaders/: calendar.py  workouts.py
garmin_toolkit/src/garmin_training_toolkit_sdk/weather/: __init__.py  config.py
garmin_toolkit/src/garmin_training_toolkit_sdk/weather/sources/: __init__.py  open_meteo.py  openweather.py
garmin_toolkit/src/garmin_training_toolkit_sdk/weather/storage/: __init__.py  sqlite.py
garmin_toolkit/tests/: test_auth_self_healing.py  test_hrv_baseline.py  test_hrv_fallback.py  test_llm_native_workouts.py  test_provider_interface.py  test_telemetry_extraction.py  test_uploaders_calendar.py  test_uploaders_workouts.py  test_workout_introspection.py
weather/: __init__.py
weather/sources/: open_meteo.py
weather/storage/: __init__.py  sqlite.py
