[project]
name = "garmin-training-toolkit-sdk"
version = "0.1.1"
description = "A robust, type-safe Python SDK for Garmin Connect data extraction."
readme = "README.md"
authors = [
    { name = "Federico Sirio", email = "federico.sirio@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["garmin", "health", "biometrics", "telemetry", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "garminconnect>=0.3.2",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/restrok/garmin-training-toolkit"
Repository = "https://github.com/restrok/garmin-training-toolkit.git"
Issues = "https://github.com/restrok/garmin-training-toolkit/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
