[project]
name = "garmin-toolkit"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Federico Sirio", email = "federico.sirio@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "garminconnect>=0.3.2",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
