[project]
name = "garmin-training-toolkit-sdk"
version = "0.2.0"
description = "A robust, type-safe Python SDK for Garmin Connect data extraction."
readme = "README.md"
authors = [
    { name = "Federico Sirio", email = "federico.sirio@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["garmin", "health", "biometrics", "telemetry", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "garminconnect>=0.3.2",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/restrok/garmin-training-toolkit-sdk"
Repository = "https://github.com/restrok/garmin-training-toolkit-sdk.git"
Issues = "https://github.com/restrok/garmin-training-toolkit-sdk/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "garminconnect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_oauthlib.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
    "types-requests-oauthlib>=2.0.0.20260408",
]
